package triptop.groepB4.service;

public interface HotelServicePoort {
}
